[gd_scene load_steps=29 format=2]

[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/egg-robo-cart/egg-robot-pilot.png" type="Texture" id=1]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/egg-robo-cart/cart-base.png" type="Texture" id=2]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/egg-robo-cart/cart-base-hotspot.png" type="Texture" id=3]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/gimmicks-scripts/egg-robo-cart-container-script.gd" type="Script" id=4]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/gimmicks-scripts/egg-robo-cart-script.gd" type="Script" id=5]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/egg-robo-cart/cart-base-back.png" type="Texture" id=6]
[ext_resource path="res://game-assets/game-sprites/player-sprites/characters-sprites/sonic-sprites/dano/dano#3.png" type="Texture" id=7]
[ext_resource path="res://game-assets/audio/sfx/car-rev.wav" type="AudioStream" id=8]
[ext_resource path="res://game-assets/audio/sfx/traffic-light.wav" type="AudioStream" id=9]
[ext_resource path="res://game-assets/audio/sfx/grab.wav" type="AudioStream" id=10]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/egg-robo-cart/pipe-guide.png" type="Texture" id=11]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/egg-robo-cart/traffic-light.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 44, 33 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 44, 0, 44, 33 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 88, 0, 44, 33 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 93, 39 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 39, 93, 39 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 78, 93, 39 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 117, 93, 39 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 156, 93, 39 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 33.5, 4.75 )

[sub_resource type="Animation" id=19]
resource_name = "Moving"
length = 0.2
loop = true
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("CartArea/EggRobo:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ "default", "default" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CartArea/EggRobo:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CartArea/Cart:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ "default", "default" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CartArea/Cart:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CartArea/EggRobo:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "default" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CartArea/EggRobo:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CartArea/Cart:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "default" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CartArea/Cart:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=20]
resource_name = "ToGreen"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=22]
resource_name = "ToRed"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 0 ]
}

[node name="EggRoboCart" type="Node2D"]
script = ExtResource( 4 )
delay_start = 1.0
acceleration = 1000.0

[node name="CartArea" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CartBack" type="Sprite" parent="CartArea"]
position = Vector2( -11, -18 )
texture = ExtResource( 6 )
centered = false
flip_h = true

[node name="EggRobo" type="AnimatedSprite" parent="CartArea"]
position = Vector2( -9, -24 )
frames = SubResource( 1 )
centered = false
flip_h = true

[node name="Cart" type="AnimatedSprite" parent="CartArea"]
position = Vector2( -45, -19 )
z_index = 3
frames = SubResource( 5 )
centered = false
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CartArea"]
position = Vector2( 14.5, 11.75 )
shape = SubResource( 15 )

[node name="Player" type="Sprite" parent="CartArea"]
visible = false
position = Vector2( 7, 0 )
texture = ExtResource( 7 )

[node name="CartCharge" type="AudioStreamPlayer2D" parent="CartArea"]
stream = ExtResource( 8 )

[node name="Traffic" type="AudioStreamPlayer2D" parent="CartArea"]
stream = ExtResource( 9 )

[node name="Grab" type="AudioStreamPlayer2D" parent="CartArea"]
stream = ExtResource( 10 )

[node name="Animator" type="AnimationPlayer" parent="."]
anims/Moving = SubResource( 19 )
anims/RESET = SubResource( 18 )

[node name="Pipe" type="Sprite" parent="."]
position = Vector2( -19, 9 )
texture = ExtResource( 11 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 32043, 8 )

[node name="StopArea" type="Node2D" parent="."]
position = Vector2( 32013, -7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StopArea"]
texture = ExtResource( 3 )
centered = false
flip_h = true

[node name="TrafficLight" type="Sprite" parent="."]
position = Vector2( 72, -73 )
z_index = -1
texture = ExtResource( 12 )
centered = false
hframes = 3
vframes = 2
region_rect = Rect2( 0, 0, 2043, 16 )

[node name="TrafficAnimator" type="AnimationPlayer" parent="TrafficLight"]
anims/RESET = SubResource( 21 )
anims/ToGreen = SubResource( 20 )
anims/ToRed = SubResource( 22 )

[connection signal="body_entered" from="CartArea" to="CartArea" method="_on_CartArea_body_entered"]
[connection signal="body_exited" from="CartArea" to="CartArea" method="_on_CartArea_body_exited"]
[connection signal="exploded" from="CartArea" to="." method="_on_CartArea_exploded"]
